// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar-chart Renders \`bar-chart\` widget settings with custom props and permissions 1`] = `
<widget-settings-stub
  divider="true"
>
  <bar-chart-widget-form-stub
    form="[object Object]"
    withperiodicrefresh="true"
    withpreset="true"
  />
</widget-settings-stub>
`;

exports[`bar-chart Renders \`bar-chart\` widget settings with default props 1`] = `
<widget-settings-stub
  divider="true"
>
  <bar-chart-widget-form-stub
    form="[object Object]"
    withperiodicrefresh="true"
    withpreset="true"
  />
</widget-settings-stub>
`;

exports[`bar-chart Renders \`bar-chart\` widget settings with default props with changed title 1`] = `
<widget-settings-stub
  dirty="true"
  divider="true"
>
  <bar-chart-widget-form-stub
    form="[object Object]"
    withperiodicrefresh="true"
    withpreset="true"
  />
</widget-settings-stub>
`;
